--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html> 
-  
-<html> 
-    <head> 
-        <title> 
-            Vanessa Magana 
-        </title> 
-    </head> 
-  
-    <body> 
-        Hello World! 
-    </body> 
-</html> 
+<!DOCTYPE HTML>
+<html>
+
+<head>
+
+<meta charset=”UTF-8”>
+
+<!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
+<title> Vanessa Magana Contact Page        </title>
+
+</head>
+
+<body>
+HELLO WORLD!!!!!
+
+
+</body>
+
+</html>
