--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 
 <head>
     <link rel="stylesheet" href="https://use.typekit.net/tjt2zgm.css">
+    <script src="https://kit.fontawesome.com/2aa180e6ac.js" crossorigin="anonymous"></script>
 <meta charset=”UTF-8”>
 
    <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
-   <title> Vanessa Magana Contact Page </title>
+   <title> Vanessa Magana </title>
 
    <link rel="stylesheet" href="styles-contact.css">
 </head>
 
 <body>
  <div class="center">
-      <img id="logo" src="images/vanessa_logo@2x.png" alt="Vanessa Magana Logo">
-      <h1> Hello, welcome to my Contact Page.<br> This is an h1 heading.</h1>
-      <h2> This is an h2 heading.</h2>
-      <p> This is a paragraph, you'll notice it's smaller.</p>
+      <img id="logo" src="images/vm_deco_logo@2x.png" width="283" height="285" alt="Vanessa Magana's Logo">
+      <p> Design creates culture. Culture shapes values. Values determine the futere. -Robert L. Peters. </p>
 
  <nav>
         <ul>
-            <li><a href="https://www.behance.net"> My Work </a></li>
-            <li><a href="https://www.linkedin.com/in/https://www.linkedin.com/in/vanessa-magana-marin-3228a7226/" target="_blank"> LinkedIn</a></li>
-            <li><a href="mailto:vmaganam@calpoly.edu">Email Me</a> </li>
+            <li><a href="https://www.behance.net"> <i class="fas fa-file-alt"></i> </a></li>
+            <li><a href="https://www.linkedin.com/in/https://www.linkedin.com/in/vanessa-magana-marin-3228a7226/" target="_blank"> <i class="fab fa-linkedin"></i></a></li>
+            <li><a href="mailto:vmaganam@calpoly.edu"> <i class="fas fa-envelope"></i></a> </li>
         </ul>
     </nav>
      
