--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
  <div class="center">
-      <img id="logo" src="images/vm_deco_logo@2x.png" width="283" height="285" alt="Vanessa Magana's Logo">
-      <p> Design creates culture. Culture shapes values. Values determine the futere. -Robert L. Peters. </p>
+      <img id="logo" src="images/vm_deco_logo@2x.png" width="383" height="385" alt="Vanessa Magana's Logo">
+      <p> "Design creates culture. Culture shapes values. Values determine the futere". -Robert L. Peters. </p>
 
  <nav>
         <ul>
