--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
  <div class="center">
       <img id="logo" src="images/vm_deco_logo@2x.png" width="383" height="385" alt="Vanessa Magana's Logo">
-      <p> "Design creates culture. Culture shapes values. Values determine the futere". -Robert L. Peters. </p>
+      <p> "Design creates culture. Culture shapes values. Values determine the futere." -Robert L. Peters </p>
 
  <nav>
         <ul>
             <li><a href="https://www.behance.net"> <i class="fas fa-file-alt"></i> </a></li>
-            <li><a href="https://www.linkedin.com/in/https://www.linkedin.com/in/vanessa-magana-marin-3228a7226/" target="_blank"> <i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/vanessa-magana-marin/" target="_blank"> <i class="fab fa-linkedin"></i></a></li>
             <li><a href="mailto:vmaganam@calpoly.edu"> <i class="fas fa-envelope"></i></a> </li>
         </ul>
     </nav>
