--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
  <nav>
         <ul>
-            <li><a href="https://www.behance.net"> <i class="fas fa-file-alt"></i> </a></li>
+            <li><a href="https://www.behance.net/vanessamagana"> <i class="fas fa-file-alt"></i> </a></li>
             <li><a href="https://www.linkedin.com/in/vanessa-magana-marin/" target="_blank"> <i class="fab fa-linkedin"></i></a></li>
             <li><a href="mailto:vmaganam@calpoly.edu"> <i class="fas fa-envelope"></i></a> </li>
         </ul>
