--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
  <div class="center">
       <img id="logo" src="images/vm_deco_logo@2x.png" width="383" height="385" alt="Vanessa Magana's Logo">
-      <p> "Design creates culture. Culture shapes values. Values determine the futere." -Robert L. Peters </p>
+      <h1> Hello my name is Vanessa Magana, Welcome to my contact page.</h1>
+      <p> &ldquo;Design creates culture. Culture shapes values. Values determine the future.&rdquo;
+        -Robert L. Peters </p>
 
  <nav>
         <ul>
