--- a/grc338/restaurantmenu/index.html
+++ b/grc338/restaurantmenu/index.html
@@ -97,7 +97,7 @@
         <p>$8.00</p>
       </li>
       <li>
-        <h4>Chocolate Lava Cake <h4>
+        <h4>Chocolate Lava Cake</h4>
         <p>raspberry coulis, creme anglaise</p>
         <p>$12.00</p>
       </li>
