--- a/grc338/website-mobile-first/index.html
+++ b/grc338/website-mobile-first/index.html
@@ -1,4 +1,4 @@
-<!doctype html>  
+ <!doctype html>  
     <html>  
         <head>  
             <meta charset="UTF-8">  
@@ -8,8 +8,7 @@
             <meta http-equiv="Expires" content="0" />  
             <title>Divine Design</title> 
             <link rel="stylesheet" href="style.css"/>
-            <href='https://fonts.googleapis.com/css?family=Fira Sans' rel='stylesheet'> 
-            
+            <href='https://fonts.googleapis.com/css?family=Birthstone' rel='stylesheet'/>
         </head>   
         <body>  
             <div class="container">
