--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -1,1 +1,126 @@
+<!doctype html>
+    <html lang="en">
+        <head>
+            <!-- You can start by deleting this line. Then, you can delete the other comments as you read them. -->
+            <meta charset="UTF-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- You need this to proper scale in actual mobile devices.-->
+            <link rel = "stylesheet" href = "style.css">
+            <title>Vanessa Delgadillo</title> <!-- This will be replaced with the actual name of the publication later.  -->
 
+            <!-- Helpful meta tags to fight GitHub aggresive caching-->
+                <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+                <meta http-equiv="Pragma" content="no-cache" />
+                <meta http-equiv="Expires" content="0" />
+            
+            </head>	
+            <body>
+            <div class="container">
+                <header>
+                   <h1><a href="index.html"><img src="logo.svg" alt="Cool Logo"></a></h1>
+                   <nav>
+                      <ul>
+                         <li><a href="#">Style</a></li>
+                         <li><a href="#">Music</a></li>
+                         <li><a href="#">Wellbeing</a></li>
+                         <li><a href="#">Sports</a></li>
+                         <li><a href="#">Opinion</a></li>
+                      </ul>
+                   </nav>
+                </header>
+                <main>
+                   <section class="main">
+                      <a href="mainstory.html">
+                         <img src="soccer-1.jpg" alt="">
+                         <h2>Story about soccer</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                      </a>
+                   </section>
+                   <section class="secondary">
+                      <a href="#">
+                         <img src="dance-1.jpg" alt="">
+                         <h2>Story about dance</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="secondary">
+                      <a href="#">
+                         <img src="coffee-1.jpg" alt="">
+                         <h2>Story about coffee</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="secondary">
+                      <a href="#">
+                         <img src="trees-1.jpg" alt="">
+                         <h2>Story about trees</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="secondary">
+                      <a href="#">
+                         <img src="guitars-1.jpg" alt="">
+                         <h2>Story about guitars</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="secondary">
+                      <a href="#">
+                         <img src="cars-1.jpg" alt="">
+                         <h2>Story about cars</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="tertiary">
+                      <a href="#">
+                         <h2>Story about surfing</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="tertiary">
+                      <a href="#">
+                         <h2>Story about hiking</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="tertiary">
+                      <a href="#">
+                         <h2>Story about flowers</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="tertiary">
+                      <a href="#">
+                         <h2>Story about candles</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="tertiary">
+                      <a href="#">
+                         <h2>Story about astronomy</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                   <section class="tertiary">
+                      <a href="#">
+                         <h2>Story about astrology</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                         </p>
+                      </a>
+                   </section>
+                </main>
+                <footer>
+                   <p>All rights reserved.</p>
+                </footer>
+             </div>
+          </body>
+       </html>
