--- a/grc339/digital-magazine-proposal/index.html
+++ b/grc339/digital-magazine-proposal/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="https://grc-ribeiro.github.io/files/grc339-proposal.css">  <!-- Leave this line as is. -->
-        <title>Your Name - Digital magazine proposal</title>
+        <title>Vanessa Delagadillo Magana- Digital magazine proposal</title>
         <!--please change Your Name to your name(s)-->
     </head>
     <body>
